--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </canvas>
   <!-- print basic game info in bottom left corner, floating on top of canvas -->
   <div id="info">
-    fluttrbox
+    <a href="https://github.com/alefnull/fluttrbox">fluttrbox</a>
     by <a href="https://alefnull.envs.sh/" target="_blank">alefnull</a>
   </div>
 </body>
